2008-03-10  Andreas Fink <andreas at fink.org>
    * gw/smsc/*: fixed a lot of warning due to pointer type mismatch
    ( (char *) versus unsinge char * and the like)

2008-03-06  Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_at.c: fixed an infinite loop for receiving delivery
      reports with SMSC string being empty.

2008-02-21	Stipe Tolj  <stolj at kannel.org>
    * gwlib/fdset.h: remove trailing ';' in a macro. 
      Thanks to Paul Bagyenda from Mbuni for spotting it.
      [Msg-Id: <5B21C330-DA5A-4E6D-B431-9AB31479A446@dsmagic.com>]
      
2008-02-19	Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.c: adding more debug output for the warning() in case the DLR 
      could not be resolved. NLC.
    * gw/wap_push_pap_compiler.c: typo fix in comment. NLC.
      [Msg-Id: <0a5a01c872e6$4c682f80$9600a8c0@VINCE>]

2008-02-07	Stipe Tolj  <stolj at kannel.org>
    * gw/wbxml_tokens.def, wap/wsp_strings.def: updates from OMNA page.
    
2008-02-02	Stipe Tolj  <stolj at kannel.org>
    * gw/ota_compiler.c: fix bug #405, where we forget to switch codepage
      when no inline value is processed for WBXML compilation. Thanks go to
      Maxim Sobolev <sobomax at sippysoft.com> for reporting and proving patch.
      [Msg-Id: <47A3C8E6.4090008@sippysoft.com>]
    
2008-02-01	Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: we need first and second level directories to care of.
    
2008-02-01	Stipe Tolj  <stolj at kannel.org>
    * utils/start-stop-daemon.c: add Cygwin platform support to allow clean
      runs for the preprocessing make target.
    
2008-02-01	Stipe Tolj  <stolj at kannel.org>
    * doc/doxygen/kannel.conf: doxygen config file for generating source
      code documentation.
    
2008-02-01	Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: ensure we get second directory level too for the 
      preprocessing target.
    
2008-01-31	Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: add build target 'pp' to allow building preprocessed 